# voice-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
voice_extractor/: __init__.py  __main__.py  denoise.py  extract.py  models.py  separate.py  train.py
voice_extractor/assets/: denoiser_cnn.pt  denoiser_unet.pt
